test/valid/58166_modTest/modTest.agu
-- Author: 58166, Manuel Campos

let modTest (n,d) : (Int,Int) -> Bool =
    (n % d) == 0

let main(_) : Unit -> Unit =
    let a : Int = 253540;
    let b : Int = 27;
    let c : Int = 2025;
    let d : Int = 2077;
    let k : Int = 5;

    print(modTest(a,k));
    print(modTest(b,k));
    print(modTest(c,k));
    print(modTest(d,k))