test/invalid-semantic/58166_wrongPara/wrongPara.agu
-- Author: 58166, Manuel Campos

-- Semantic Error (Calling a function with wrong number of arguments)

let modTest (n,d) : (Int,Int) -> Bool =
    (n % d) == 0

let _ : Unit =
    let x : Int = 50;
    let y : Int = 5;
    let result : Bool = modTest(x);
    print(result)